h4 correction mobile

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -38,8 +38,7 @@ body {
     align-items: center;
     margin: auto;
     color: white;
-    text-align: center;
-    font-size: 48px;
+    font-size: 28px;
     font-family: var(--text-font-family);
   }
 
